--- a/1.html
+++ b/1.html
@@ -16,5 +16,31 @@
   <br>부산의 <a href="https://blog.naver.com/thswls135/221271455273" target="_blank" title="snsaca 블로그">블록체인 마케팅</a> ceo 손진석(30)이 화제다.<br>
   <img src="blockchain.jpg" width="600">
   <p style="margin-top:40px">지난 6월 창업 선도대학에 선정된 <strong>블록체인 마케팅</strong>은 마케팅 산업의 혁명을 일으킬 것으로 기대를 모으고 있다.</p><p>블록체인 마케팅이란 스마트 컨트랙트를 기반으로 중개자를 없애 광고주와 고객을 직접적으로 만나게 하는 기술이다.
+    <p>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/XNrkuFeVoYM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    </p>
+    <p>
+      <div id="disqus_thread"></div>
+<script>
+
+/**
+*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+/*
+var disqus_config = function () {
+this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+};
+*/
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+s.src = 'https://web1-orssjykmjt.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
+    </p>
 </body>
 </html>
